# JobPilot_Master

./: .env.example  .gitignore  README.md  package-lock.json  package.json
JobPilot-Parser/: .env.example  .gitignore
JobPilot-Parser/.cursor/: mcp.json
JobPilot-Parser/data/: test_resume.txt
JobPilot-Parser/frontend/: index.html  package.json  vite.config.ts
JobPilot-Parser/jobpilot/: config.py
JobPilot-Parser/scripts/: check_db.py
Scraper Code/: requirements.txt
Scraper Code/scripts/: find_workday_slug.py  fix_workday_detail_urls.py  resolve_ats_urls.py  scrape_all_supported.py
Scraper Code/server/: main.py  postgres_store.py  routes.py  schemas.py  store.py
apps/parser-api/: .gitignore  README.md  pyproject.toml  requirements.txt
apps/parser-api/examples/: sample_candidate.py  test_parser.py
apps/parser-api/jobpilot/: __init__.py  config.py
apps/parser-api/jobpilot/api/: main.py
apps/parser-api/jobpilot/db/: __init__.py
apps/parser-api/jobpilot/models/: __init__.py  candidate.py
apps/parser-api/jobpilot/services/: auth.py  candidates.py  resume_parser.py  text_extract.py
apps/parser-api/jobpilot/services/resume/: contact.py  document.py  education.py  experience.py  layout.py  pipeline.py  projects.py
apps/parser-api/supabase/migrations/: 20260318130000_create_candidates_table.sql
docs/: INTEGRATION_PLAN.md
frontend/: index.html  package.json  vite.config.ts
jd-match-scoring/: package-lock.json  package.json
job-autofill-scraper/: job-autofill-cursor-prompt.md  package.json
scripts/: run-integration-tests.mjs
(+158 files in other folders)
