[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpilot"
version = "0.1.0"
description = "Job application data collection for ATS platforms (Greenhouse, Workday, etc.)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "pdfplumber>=0.11.4",
    "python-docx>=1.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jobpilot*"]

[tool.ruff]
line-length = 100
target-version = "py311"
